# arxiv-sanity-preserver

./: Makefile  README.md  main.py  pyproject.toml
