[project]
name = "arxiv-sanity-preserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "numpy>=2.4.3",
    "pymongo>=4.16.0",
    "python-dateutil>=2.9.0.post0",
    "python-twitter>=3.5",
    "pytz>=2026.1.post1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tornado>=6.5.5",
]
